Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.6(EOL)
Description
MDEV-515 will replace row-level locking with table-level locking in the special case that an INSERT is performed into an empty table or partition.
This causes a few replication tests to fail. We have adjusted some tests by inserting an extra record into the table, so that the normal row-level locking and undo logging will be used. But, some tests will require deeper studying to assess whether such a work-around is acceptable or whether some improvements to the replication logic will be needed. Some failures are nondeterministic:
multi_source.gtid_ignore_duplicates 'innodb' [ pass ] 5774
|
multi_source.gtid_ignore_duplicates 'innodb' [ 2 pass ] 4660
|
multi_source.gtid_ignore_duplicates 'innodb' [ 3 pass ] 5678
|
multi_source.gtid_ignore_duplicates 'innodb' [ 4 fail ] Found warnings/errors in server log file!
|
Test ended at 2021-01-19 09:33:32
|
line
|
2021-01-19 9:33:28 92 [Warning] Slave: Connection was killed Error_code: 1927
|
2021-01-19 9:33:28 92 [Warning] Slave: Deadlock found when trying to get lock; try restarting transaction Error_code: 1213
|
2021-01-19 9:33:28 92 [Warning] Slave: Commit failed due to failure of an earlier commit on which this one depends Error_code: 1964
|
2021-01-19 9:33:28 89 [Warning] Slave: Deadlock found when trying to get lock; try restarting transaction Error_code: 1213
|
2021-01-19 9:33:28 89 [Warning] Slave: Deadlock found when trying to get lock; try restarting transaction Error_code: 1213
|
2021-01-19 9:33:28 89 [Warning] Slave: Commit failed due to failure of an earlier commit on which this one depends Error_code: 1964
|
Attachments
Issue Links
- is caused by
-
MDEV-515 innodb bulk insert
-
- Closed
-
-
MDEV-33475 --gtid-ignore-duplicate can double-apply event in case of parallel replication retry
-
- Closed
-
- relates to
-
MDEV-27751 InnoDB: Failing assertion: !cursor->index->is_committed() in row0ins.cc line 221 (10.7+)
-
- Closed
-
-
MDEV-37708 Assertion `!trx->is_bulk_insert()' failed or HA_ERR_KEY_NOT_FOUND
-
- Confirmed
-
-
MDEV-33350 Bulk InnoDB LOAD DATA breaks replication upon hitting duplicate key
-
- Confirmed
-