Work around MDEV-24622, MDEV-24623

FIXME: rpl.rpl_parallel_no_log_slave_updates still hangs!